Add landmark validation for face detection to improve recognition accuracy